# fio

./: .gitignore  Cargo.toml
init-db/: 01-create-readonly-user.sh
src/: config.rs  error.rs  lib.rs  main.rs  startup.rs
src/commands/: admin.rs  feed_embed.rs  general.rs  mod.rs  ping.rs  sys.rs
src/commands/calendar/: config.rs  mod.rs  status.rs
src/commands/forex/: calendar.rs  config.rs  mod.rs
src/commands/market/: alerts.rs  autocomplete.rs  embeds.rs  mod.rs  prices.rs
src/commands/moderation/: actions.rs  config.rs  duration.rs  mod.rs  warnings.rs
src/commands/stock/: config.rs  latest.rs  mod.rs  placeholders.rs
src/commands/twitter/: config.rs  mod.rs
src/commands/volatility/: config.rs  mod.rs
src/handlers/: mod.rs
src/handlers/events/: member.rs  mod.rs  voice.rs
src/repository/: calendar.rs  connection.rs  feed_channel.rs  forex.rs  mod.rs  sent_item.rs  stock.rs  twitter.rs  volatility.rs
src/repository/moderation/: config.rs  mod.rs  warnings.rs
src/repository/price_alert/: mod.rs  model.rs  queries.rs
src/services/: market_ws.rs  mod.rs  presence.rs  price_alert.rs
src/services/core_ws/: embed.rs  handlers.rs  mod.rs  types.rs
src/utils/: embed.rs  sys.rs
