[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
atlsd-observability = { path = "../../crates/atlsd-observability" }
serde_json = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true}
dotenvy = {workspace = true}
tokio-tungstenite = { workspace = true}
chrono = {  workspace = true}
uuid = {workspace = true}
reqwest = { workspace = true}
async-trait = {workspace = true}
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
serenity = { version = "0.12.4", features = ["full"] }
poise = "0.6.1"
sysinfo = "0.35.0"
urlencoding = "2.1.3"
parking_lot = "0.12"
once_cell = "1.19"
rss = "2.0"
chrono-tz = "0.10"
quick-xml = "0.37"
regex-lite = "0.1"
base64 = "0.22.1"
